[metadata]
name = Squirrel-backend
author = Gaetan Semet
author-email = gaetan@xeberon.net
summary = Squirrel Backend
description-file = ../README.rst
home-page = https://squirrel-ams.com
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    squirrel

[entry_points]
console_scripts =
    squirrel-heroku = squirrel.launcher.squirrel_heroku:run
    squirrel-prod = squirrel.launcher.squirrel_prod:run
    squirrel-staging = squirrel.launcher.squirrel_staging:run
    squirrel-dev = squirrel.launcher.squirrel_dev:run
    squirrel-cli = squirrel.launcher.squirrel_cli:run
    auto_relauncher = squirrel.launcher.auto_relauncher:run
